--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,13 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_TOTAL_CODE_TIME: false
+          SHOW_TOTAL_CODE_TIME: true
           SHOW_PROFILE_VIEWS: false
           SHOW_COMMIT: false
           SHOW_LANGUAGE: false
           SHOW_SHORT_INFO: false
           SHOW_OS: false
-          SHOW_PROJECTS: true
+          SHOW_PROJECTS: false
           SHOW_EDITORS: false
           SHOW_LANGUAGE_PER_REPO: false
           SHOW_LOC_CHART: false
