--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_TOTAL_CODE_TIME: true
+          SHOW_TOTAL_CODE_TIME: false
           SHOW_PROFILE_VIEWS: false
           SHOW_COMMIT: false
           SHOW_LANGUAGE: false
